# warship

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  base.c  build.sh  main.c  stm32f1xx_it.c  zerocfg.h
application/: led_server.c  led_server.h
driver/: drv_sram.c  drv_sram.h  gpio.c  gpio.h  i2c.c  i2c.h  spi.c  spi.h  spi1.c  spi1.h  uart.c  uart.h
scripts/: install.sh
