PROJECT(warship C CXX ASM)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ENABLE_LANGUAGE(ASM)

SET(STM32_CHIP STM32F103ZE)

SET(FREERTOS_HEAP_IMPL 4)

FIND_PACKAGE(CMSIS REQUIRED)
FIND_PACKAGE(STM32HAL COMPONENTS uart gpio usart sram REQUIRED)
FIND_PACKAGE(FreeRTOS REQUIRED)
FIND_PACKAGE(ZeroLib REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${STM32HAL_INCLUDE_DIR}
    ${CMSIS_INCLUDE_DIRS}
    ${FreeRTOS_INCLUDE_DIRS}
    ${ZERO_LIB_INCLUDE_DIR}
)

SET(STM32_LINKER_SCRIPT ${CMSIS_LINKER_SCRIPT})

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_PROJECT_NAME}_SOURCES)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/application ${CMAKE_PROJECT_NAME}_APP_SOURCES)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/driver ${CMAKE_PROJECT_NAME}_DRV_SOURCES)

SET(PROJECT_SOURCES
    ${${CMAKE_PROJECT_NAME}_SOURCES}
    ${${CMAKE_PROJECT_NAME}_APP_SOURCES}
    ${${CMAKE_PROJECT_NAME}_DRV_SOURCES}
    ${CMSIS_SOURCES}
    ${STM32HAL_SOURCES}
    ${FreeRTOS_SOURCES}
    ${ZERO_LIB_SOURCES}
)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}
                ${PROJECT_SOURCES}
                ${CMSIS_SOURCES})


STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})

ADD_CUSTOM_COMMAND(TARGET ${CMAKE_PROJECT_NAME}
                    POST_BUILD
                    COMMAND ${CMAKE_OBJCOPY} -Oihex ${CMAKE_PROJECT_NAME} ${CMAKE_PROJECT_NAME}.hex)

ADD_CUSTOM_COMMAND(TARGET ${CMAKE_PROJECT_NAME}
                    POST_BUILD
                    COMMAND ${CMAKE_OBJCOPY} -Obinary ${CMAKE_PROJECT_NAME} ${CMAKE_PROJECT_NAME}.bin)

STM32_PRINT_SIZE_OF_TARGETS(${CMAKE_PROJECT_NAME})
